harvardcards/static/css/styles.css
/* ... */
.contentWrapper{
	display: inline-block;
}
	
	#content{
		float: left;
		display: inline-block;
		/*background-color: #C99;*/
	}
	
/********** main nav (start) *************/
#navigation{
	float: left;
	width: 16.666666666667%;
	/*background-color: #0CF;*/
}

	#navigation nav > ul a{
		font-family: 'Vollkorn', Times, serif;
		font-size: 1.25em;
		color: #4c4c4c;
		text-decoration: none;
		line-height: 1.15em;
		display: inline-block;
		width:90%;
		padding: 0.25em 0 0.25em 10%;
	}
		#navigation nav > ul a:hover {
			background: url('/static/img/mainNavHover.png') no-repeat left top;
		}
		#navigation nav > ul a.active {
			background: url('/static/img/mainNavActive.png') no-repeat left top;
		}
	
	#navigation nav ul ul a{
		font-family: Arial, Helvetica, san-serif;
		font-size: 0.75em;
		font-weight: bold;
		color: #4c4c4c;
		text-decoration: none;
		width: 80%;
		padding: 0.75em 0 0.15em 20%;
	}
	
		#navigation nav ul ul a:hover{
			background: transparent url('/static/img/subNavHover.png') no-repeat 1.5em 1em;
		}
		#navigation nav ul ul a.active{
			background: transparent url('/static/img/subNavActive.png') no-repeat 1.5em 1em !important;
		}
/********** main nav (end) *************/		

a#addAcourse
, a#addCard{
	text-align: center;
	text-decoration: none;
	display: block;
	width: 60%;
	font-size: 1.875em;
	color: #4c4c4c;
	border: 2px dashed #838383;
	text-transform:uppercase;
	margin: 0 auto 0.25em;
	padding: 0.25em 10%;
}

a#addCard{
	margin: 0;
	padding: 1em 2%;
	width: 8%;
	float: left;
}
/********** hp course ROW (start) ***********/
.courseWrapper{ display: inline-block; width: 100%; margin-bottom: 1em;}	
.courseHeader{
	width: 100%;
	border-bottom: solid 2px #4c4c4c;
	display: inline-block;
	margin-bottom: 1em;
}
.addCourseWrapper{
	display: none;
}
.courseHeader h2{
	float: left;
}

	/* decks on homepage (start)*/
	ul.courseDecks
	, ul.templateDecks { display: inline-block; width: 100%; }
	ul.courseDecks li{
		background: #eeeded url('/static/img/deckBkg.jpg') no-repeat 50% 50%;
		text-align: center;
		border: solid 1px #e1dfdf;
		position: relative;
	}
	/* template deck (start) */
	ul.templateDecks li{
		background: none;
		text-align: center;
		border: dashed 2px #838383;
		position: relative;
	}
		a.template{
			display: inline-block;
			width: 100%;
			height: 167px;
			text-decoration: none;
		}
			a.template:hover h2{
				color: #A51C30;
			}
	/* template deck (end) */
		li.deck { height: 167px; } 
		
		ul.courseDecks h2
		, ul.templateDecks h2 { padding: 0.25em 0; }
		ul.courseDecks h3{display: inline;}
		p.lastUpdated { font-style: italic; margin-bottom: 1em; }
	
	
		/* arrows (start) */
		.arrow{
			display: inline-block;
			float: right;
			background-color: #f3f3f3;
		}
		
		.arrowExpand { 
			border-top: solid 1px #e1dfdf;
			position: absolute;
			bottom: 0;
			right: 0;
		}
		/* arrows (end) */
		
		ul.deckMenu{
			display: none;
		}
		
			ul.deckMenu li{
				width: 50%;
				float: left;
				display: inline-block;
				background-image: none;
				background-color: #f8f8f7;
				border: 0;
				margin:0;
			}
			
			ul.deckMenu li.arrowContainer{
				width: 100%;
				border-bottom: 0;
			}
			
			.viewReview{
				background: #4e84c4 url('/static/img/viewReviewArrow.jpg') no-repeat 90% 50%;
				padding: 0.5em 0.85em;
				display: inline-block;
				-webkit-border-radius: 12px; 
				-moz-border-radius: 12px; 
				border-radius: 12px;
				color: #f3f3f1;
				font-family: 'League Gothic';
				font-size: 1.25em;
				text-transform: uppercase;
				text-decoration: none;
			}
			
		.openDeckMenu{
			width: 100%;
			z-index: 1;
			position: relative;
			border-top: solid 1px #e1dfdf;
			background-color: #f8f8f7;
		}
	/* decks on homepage (end)*/

/********** hp course ROW (end) *************/
/********** admin menus i.e edit/delete/share (start) ***********/
ul.adminMenu 
, ul.sliderNavNextPrev{
	display: inline-block;
	float: left;
	margin-left: 1em;
}

	ul.sliderNavNextPrev{
		width: 100%;
		margin-left: 5%;
		margin-right: 5%;
	}

	ul.adminMenuRight{
		float: right;
		margin-right: 0em;
	}
		
	ul.adminMenu li {
		display: inline-block;
		margin-right: 0.5em;
	}
		ul.adminMenuRight li { margin: 0; } /*no margin needed for right hand menu*/
	
	ul.adminMenu li a
	, .adminMenuBtn
	, li.sliderPrev a
	, li.sliderNext a
	, a.reveal
	, .controls div a
	, .courseHeader div a{
		display: inline-block;
		padding: 0.5em 1em;
		color: #444444;
		text-decoration: none;
		font-family: Arial, Helvetica, sans-serif;
		font-weight:700;
		font-size: 0.75em;
		background-color: #f5f5f5; 
		background-image: url('/static/img/adminMenuFallBackImg.jpg'); 
		background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f1f1f1), to(#f5f5f5));
		background-image: -webkit-linear-gradient(top, #f1f1f1, #f5f5f5); 
		background-image:    -moz-linear-gradient(top, #f1f1f1, #f5f5f5);
		background-image:     -ms-linear-gradient(top, #f1f1f1, #f5f5f5);
		background-image:      -o-linear-gradient(top, #f1f1f1, #f5f5f5);
		border: solid 1px #dcdcdc;
	}
		li.sliderPrev {
			float: left;
		}
		li.sliderNext {
			float: right;
		}
	
/********** admin menus i.e edit/delete/share (end) *************/

/********** cards inside a deck view (start) *************/
#cardSlider{
	display: inline-block;
	float: left;
	background-color: #f3f3f1;
	border: solid 1px #e1dfdf;
	padding: 0.5em 4.976851851852%;
	position: relative;
}

.cardHolder{
	display: inline-block;
	width: 100%;
	overflow: hidden;
	float: left;
}

ul#cards{
	display: inline-block;
	float: left;
	width: 100%;
	position: relative;
	-webkit-transition: 0.5s left;
	-moz-transition: 0.5s left;
	-ms-transition: 0.5s left;
	-o-transition: 0.5s left;
	list-style: none;
	margin: 0;
	padding: 0;
}

	ul#cards li{
		display: inline-block;
		width: 19%;
		background-color: #f3f3f1;
		margin-right: 1%;
		float: left;
		border:solid 6px #d2d2d2;
	}
		ul#cards li div{
		height: 2em;
		background-color: #f3f3f1;

	}
/* ... */

